# visual-width

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/: __init__.py  visual_width.py
visual_width.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
