[build-system]
requires = ["setuptools>=80.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-width"
version = "0.1.1"
description = "A Python library for calculating visual width of text, especially for subtitle display"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/speech2srt/visual-width"
Repository = "https://github.com/speech2srt/visual-width"
Issues = "https://github.com/speech2srt/visual-width/issues"

[tool.setuptools]
package-dir = {"visual_width" = "src"}
packages = ["visual_width"]

